# Kaleidoscope-compiler

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/module/: LLVM.cmake
cmake/utils/: GetLLVM.cmake
include/kaleidoscope/: ast.h  lexer.h  logging.h  macro.h  parser.h  source_location.h  token.h
src/ir/: CMakeLists.txt  ast_visiter.cc  ast_visiter.h
src/lexer/: CMakeLists.txt  file.cc  file.h  lexer.cc  lexer_exec.cc
src/parser/: CMakeLists.txt  parser.cc  parser_exec.cc
tools/: fmt_cpp_srcs.py
